# bevy-hl

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  bevy_hl.c  build.bat  haxelib.json  rust-toolchain.toml
haxe/bevy/: Clock.hx  ComponentCatalog.hx  DynamicComponentStorage.hx  DynamicQuery.hx  Entity.hx  EntityHandle.hx  EventBus.hx  EventCatalog.hx  EventChannel.hx  EventSubscription.hx  IEventChannel.hx  IEventSubscription.hx  Native.hx  Query.hx  QueryBase.hx  ResourceStore.hx  System.hx  SystemExecutionError.hx  SystemLifecycleEvent.hx  SystemLifecycleState.hx  SystemLifecycleSubscription.hx  SystemLifetime.hx  SystemList.hx  SystemStopReason.hx  World.hx
haxe/bevy/macro/: ComponentTypeRegistry.hx  EventMacro.hx  EventTypeRegistry.hx  ResourceMacro.hx  SystemBuilder.hx  WorldMacro.hx
rust/src/: lib.rs
sample/: ChainPlayer.hx  ChainReady.hx  ChainRepl.hx  ChainSpawn.hx  DamageEvent.hx  DamageEventEmitterSystem.hx  DamageEventSystem.hx  EntityEvent.hx  FailingActivationSystem.hx  FaultingSystem.hx  FilteredEventSystem.hx  GameConfig.hx  IGameConfig.hx  LegacyEntity.hx  LifecycleSystem.hx  Main.hx  MovementSystem.hx  Position.hx  PrimitiveFlag.hx  PulseSystem.hx  RecoverySystem.hx  ResourceSystem.hx  SameFrameObserveSystem.hx  SameFrameReplSystem.hx  SameFrameSpawnSystem.hx  Sleeping.hx  Velocity.hx  run.bat  sample.hxml
